// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QimenService 端到端 > 快照回歸：常用日期 × 盤式組合 > 國慶晨盤 2024-10-1 8時 1`] = `
{
  "gongs": [
    {
      "di": "丁",
      "g": 1,
      "kong": true,
      "men": "生",
      "shen": "虎",
      "tian": "乙",
      "xing": "任",
    },
    {
      "di": "癸",
      "g": 2,
      "kong": false,
      "men": "惊",
      "shen": "天",
      "tian": "戊",
      "xing": "柱",
    },
    {
      "di": "壬",
      "g": 3,
      "kong": false,
      "men": "杜",
      "shen": "阴",
      "tian": "辛",
      "xing": "辅",
    },
    {
      "di": "辛",
      "g": 4,
      "kong": false,
      "men": "景",
      "shen": "蛇",
      "tian": "丙",
      "xing": "英",
    },
    {
      "di": "庚",
      "g": 5,
      "kong": false,
      "men": "惊",
      "shen": "天",
      "tian": "戊",
      "xing": "禽",
    },
    {
      "di": "己",
      "g": 6,
      "kong": false,
      "men": "休",
      "shen": "武",
      "tian": "丁",
      "xing": "蓬",
    },
    {
      "di": "戊",
      "g": 7,
      "kong": false,
      "men": "开",
      "shen": "地",
      "tian": "己",
      "xing": "心",
    },
    {
      "di": "乙",
      "g": 8,
      "kong": true,
      "men": "伤",
      "shen": "合",
      "tian": "壬",
      "xing": "冲",
    },
    {
      "di": "丙",
      "g": 9,
      "kong": false,
      "men": "死",
      "shen": "符",
      "tian": "癸",
      "xing": "芮",
    },
  ],
  "jieQi": "秋分",
  "juShu": 7,
  "siZhu": {
    "dayGan": "戊",
    "dayGanZhi": "戊戌",
    "dayZhi": "戌",
    "hourGan": "丙",
    "hourGanZhi": "丙辰",
    "hourZhi": "辰",
    "monthGanZhi": "癸酉",
    "yearGanZhi": "甲辰",
  },
  "xunShou": {
    "kongWang": [
      "子",
      "丑",
    ],
    "xunShou": "甲寅",
    "zhiFuLuoGong": 9,
    "zhiFuXing": "芮",
    "zhiShiLuoGong": 9,
    "zhiShiMen": "死",
  },
  "yinYangDun": "阴遁",
  "yuan": "上元",
}
`;

exports[`QimenService 端到端 > 快照回歸：常用日期 × 盤式組合 > 日盤轉盤拆補 2024-2-4 14時 1`] = `
{
  "gongs": [
    {
      "di": "丙",
      "g": 1,
      "kong": false,
      "men": "开",
      "shen": "地",
      "tian": "乙",
      "xing": "芮",
    },
    {
      "di": "乙",
      "g": 2,
      "kong": false,
      "men": "景",
      "shen": "合",
      "tian": "戊",
      "xing": "冲",
    },
    {
      "di": "戊",
      "g": 3,
      "kong": false,
      "men": "生",
      "shen": "符",
      "tian": "辛",
      "xing": "心",
    },
    {
      "di": "己",
      "g": 4,
      "kong": true,
      "men": "伤",
      "shen": "蛇",
      "tian": "丙",
      "xing": "蓬",
    },
    {
      "di": "庚",
      "g": 5,
      "kong": false,
      "men": "景",
      "shen": "合",
      "tian": "戊",
      "xing": "禽",
    },
    {
      "di": "辛",
      "g": 6,
      "kong": false,
      "men": "惊",
      "shen": "武",
      "tian": "丁",
      "xing": "英",
    },
    {
      "di": "壬",
      "g": 7,
      "kong": false,
      "men": "死",
      "shen": "虎",
      "tian": "己",
      "xing": "辅",
    },
    {
      "di": "癸",
      "g": 8,
      "kong": false,
      "men": "休",
      "shen": "天",
      "tian": "壬",
      "xing": "柱",
    },
    {
      "di": "丁",
      "g": 9,
      "kong": false,
      "men": "杜",
      "shen": "阴",
      "tian": "癸",
      "xing": "任",
    },
  ],
  "jieQi": "大寒",
  "juShu": 3,
  "siZhu": {
    "dayGan": "戊",
    "dayGanZhi": "戊戌",
    "dayZhi": "戌",
    "hourGan": "己",
    "hourGanZhi": "己未",
    "hourZhi": "未",
    "monthGanZhi": "乙丑",
    "yearGanZhi": "癸卯",
  },
  "xunShou": {
    "kongWang": [
      "辰",
      "巳",
    ],
    "xunShou": "甲午",
    "zhiFuLuoGong": 3,
    "zhiFuXing": "心",
    "zhiShiLuoGong": 1,
    "zhiShiMen": "开",
  },
  "yinYangDun": "阳遁",
  "yuan": "上元",
}
`;

exports[`QimenService 端到端 > 快照回歸：常用日期 × 盤式組合 > 時盤轉盤拆補 2024-6-21 10時 1`] = `
{
  "gongs": [
    {
      "di": "庚",
      "g": 1,
      "kong": false,
      "men": "休",
      "shen": "地",
      "tian": "戊",
      "xing": "冲",
    },
    {
      "di": "己",
      "g": 2,
      "kong": true,
      "men": "死",
      "shen": "蛇",
      "tian": "丁",
      "xing": "心",
    },
    {
      "di": "戊",
      "g": 3,
      "kong": false,
      "men": "伤",
      "shen": "虎",
      "tian": "辛",
      "xing": "英",
    },
    {
      "di": "乙",
      "g": 4,
      "kong": false,
      "men": "杜",
      "shen": "合",
      "tian": "己",
      "xing": "芮",
    },
    {
      "di": "丙",
      "g": 5,
      "kong": true,
      "men": "死",
      "shen": "蛇",
      "tian": "丁",
      "xing": "禽",
    },
    {
      "di": "丁",
      "g": 6,
      "kong": false,
      "men": "开",
      "shen": "天",
      "tian": "壬",
      "xing": "任",
    },
    {
      "di": "癸",
      "g": 7,
      "kong": false,
      "men": "惊",
      "shen": "符",
      "tian": "庚",
      "xing": "蓬",
    },
    {
      "di": "壬",
      "g": 8,
      "kong": false,
      "men": "生",
      "shen": "武",
      "tian": "乙",
      "xing": "辅",
    },
    {
      "di": "辛",
      "g": 9,
      "kong": true,
      "men": "景",
      "shen": "阴",
      "tian": "癸",
      "xing": "柱",
    },
  ],
  "jieQi": "夏至",
  "juShu": 3,
  "siZhu": {
    "dayGan": "丙",
    "dayGanZhi": "丙辰",
    "dayZhi": "辰",
    "hourGan": "癸",
    "hourGanZhi": "癸巳",
    "hourZhi": "巳",
    "monthGanZhi": "庚午",
    "yearGanZhi": "甲辰",
  },
  "xunShou": {
    "kongWang": [
      "午",
      "未",
    ],
    "xunShou": "甲申",
    "zhiFuLuoGong": 7,
    "zhiFuXing": "蓬",
    "zhiShiLuoGong": 1,
    "zhiShiMen": "休",
  },
  "yinYangDun": "阴遁",
  "yuan": "中元",
}
`;

exports[`QimenService 端到端 > 快照回歸：常用日期 × 盤式組合 > 時盤轉盤茅山 2024-2-4 14時 1`] = `
{
  "gongs": [
    {
      "di": "壬",
      "g": 1,
      "kong": true,
      "men": "开",
      "shen": "阴",
      "tian": "戊",
      "xing": "心",
    },
    {
      "di": "癸",
      "g": 2,
      "kong": false,
      "men": "景",
      "shen": "天",
      "tian": "辛",
      "xing": "英",
    },
    {
      "di": "丁",
      "g": 3,
      "kong": false,
      "men": "生",
      "shen": "虎",
      "tian": "庚",
      "xing": "任",
    },
    {
      "di": "丙",
      "g": 4,
      "kong": false,
      "men": "伤",
      "shen": "武",
      "tian": "丁",
      "xing": "冲",
    },
    {
      "di": "乙",
      "g": 5,
      "kong": false,
      "men": "景",
      "shen": "天",
      "tian": "辛",
      "xing": "禽",
    },
    {
      "di": "戊",
      "g": 6,
      "kong": false,
      "men": "惊",
      "shen": "蛇",
      "tian": "己",
      "xing": "柱",
    },
    {
      "di": "己",
      "g": 7,
      "kong": false,
      "men": "死",
      "shen": "符",
      "tian": "癸",
      "xing": "芮",
    },
    {
      "di": "庚",
      "g": 8,
      "kong": true,
      "men": "休",
      "shen": "合",
      "tian": "壬",
      "xing": "蓬",
    },
    {
      "di": "辛",
      "g": 9,
      "kong": false,
      "men": "杜",
      "shen": "地",
      "tian": "丙",
      "xing": "辅",
    },
  ],
  "jieQi": "大寒",
  "juShu": 6,
  "siZhu": {
    "dayGan": "戊",
    "dayGanZhi": "戊戌",
    "dayZhi": "戌",
    "hourGan": "己",
    "hourGanZhi": "己未",
    "hourZhi": "未",
    "monthGanZhi": "乙丑",
    "yearGanZhi": "癸卯",
  },
  "xunShou": {
    "kongWang": [
      "子",
      "丑",
    ],
    "xunShou": "甲寅",
    "zhiFuLuoGong": 7,
    "zhiFuXing": "芮",
    "zhiShiLuoGong": 7,
    "zhiShiMen": "死",
  },
  "yinYangDun": "阳遁",
  "yuan": "下元",
}
`;

exports[`QimenService 端到端 > 快照回歸：常用日期 × 盤式組合 > 時盤飛盤拆補 2024-6-21 10時 1`] = `
{
  "gongs": [
    {
      "di": "庚",
      "g": 1,
      "kong": false,
      "men": "休",
      "shen": "地",
      "tian": "乙",
      "xing": "柱",
    },
    {
      "di": "己",
      "g": 2,
      "kong": true,
      "men": "开",
      "shen": "蛇",
      "tian": "丙",
      "xing": "心",
    },
    {
      "di": "戊",
      "g": 3,
      "kong": false,
      "men": "惊",
      "shen": "虎",
      "tian": "丁",
      "xing": "禽",
    },
    {
      "di": "乙",
      "g": 4,
      "kong": false,
      "men": "死",
      "shen": "合",
      "tian": "癸",
      "xing": "辅",
    },
    {
      "di": "丙",
      "g": 5,
      "kong": true,
      "men": "开",
      "shen": "蛇",
      "tian": "壬",
      "xing": "冲",
    },
    {
      "di": "丁",
      "g": 6,
      "kong": false,
      "men": "景",
      "shen": "天",
      "tian": "辛",
      "xing": "芮",
    },
    {
      "di": "癸",
      "g": 7,
      "kong": false,
      "men": "杜",
      "shen": "符",
      "tian": "庚",
      "xing": "蓬",
    },
    {
      "di": "壬",
      "g": 8,
      "kong": false,
      "men": "伤",
      "shen": "武",
      "tian": "己",
      "xing": "英",
    },
    {
      "di": "辛",
      "g": 9,
      "kong": true,
      "men": "生",
      "shen": "阴",
      "tian": "戊",
      "xing": "任",
    },
  ],
  "jieQi": "夏至",
  "juShu": 3,
  "siZhu": {
    "dayGan": "丙",
    "dayGanZhi": "丙辰",
    "dayZhi": "辰",
    "hourGan": "癸",
    "hourGanZhi": "癸巳",
    "hourZhi": "巳",
    "monthGanZhi": "庚午",
    "yearGanZhi": "甲辰",
  },
  "xunShou": {
    "kongWang": [
      "午",
      "未",
    ],
    "xunShou": "甲申",
    "zhiFuLuoGong": 7,
    "zhiFuXing": "蓬",
    "zhiShiLuoGong": 1,
    "zhiShiMen": "休",
  },
  "yinYangDun": "阴遁",
  "yuan": "中元",
}
`;
